--- a/packages/shopflow-product-listing/package.json
+++ b/packages/shopflow-product-listing/package.json
@@ -3,13 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "src/import.ts",
   "scripts": {
     "dev": "vite --strictPort",
     "build": "tsc -b && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --strictPort"
+    "preview": "vite preview --strictPort",
+    "build:preview": "node watch.mjs"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
