--- a/main/package.json
+++ b/main/package.json
@@ -15,7 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "shopflow-shared": "workspace:*",
-    "shopflow-cart": "workspace:*"
+    "shopflow-cart": "workspace:*",
+    "shopflow-product-listing": "workspace:*"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
