--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
     "inquirer": "^11.0.2",
+    "kill-port": "^2.0.1",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.4.13",
