--- a/packages/shopflow-footer/package.json
+++ b/packages/shopflow-footer/package.json
@@ -6,10 +6,10 @@
   "main": "src/components/index.ts",
   "scripts": {
     "dev": "vite --strictPort",
-    "build": "tsc && vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --strictPort",
-    "build:preview": "nodemon"
+    "build:preview": "node watch.mjs"
   },
   "dependencies": {
     "react": "^18.3.1",
