--- a/packages/shopflow-header/package.json
+++ b/packages/shopflow-header/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --strictPort",
-    "build:preview": "nodemon"
+    "build:preview": "node watch.mjs"
   },
   "dependencies": {
     "react": "^18.3.1",
