--- a/packages/shopflow-cart/package.json
+++ b/packages/shopflow-cart/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --strictPort",
-    "build:preview": "node watch.mjs"
+    "build:preview": "node watch.mjs",
+    "build:start": "vite build && vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -21,7 +22,6 @@
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/react-virtualized": "^9.21.30",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
