--- a/packages/shopflow-product-listing/package.json
+++ b/packages/shopflow-product-listing/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --strictPort",
-    "build:preview": "node watch.mjs"
+    "build:preview": "node watch.mjs",
+    "build:start": "vite build && vite preview"
   },
   "dependencies": {
     "axios": "^1.7.7",
