refactor: fix typos and update page title
- Fix typo in DOCTYPE declaration
- Update page title to "Shop Flow"
- Update dev script in package.json to include host flag
- Update build:start script in package.json to include silent mode and clear screen flag
- Update VITE_MAIN_REMOTE in .env file to use localhost
- Update VITE_CART_REMOTE, VITE_HEADER_REMOTE, VITE_FOOTER_REMOTE, and VITE_PRODUCT_LISTING_REMOTE in .env file to use localhost
- Remove unused worker.mjs and scripts.mjs files
- Update vite.config.ts to use environment variables for remote URLs

--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ VITE_HEADER_PORT=3002
 VITE_FOOTER_PORT=3003
 VITE_PRODUCT_LISTING_PORT=3004
 VITE_MAIN_PORT=3000
+
+VITE_CART_REMOTE=http://localhost:3001/assets/remoteEntry.js
+VITE_HEADER_REMOTE=http://localhost:3002/assets/remoteEntry.js
+VITE_FOOTER_REMOTE=http://localhost:3003/assets/remoteEntry.js
+VITE_PRODUCT_LISTING_REMOTE=http://localhost:3004/assets/remoteEntry.js
+VITE_MAIN_REMOTE=http://localhost:3000/assets/remoteEntry.js
