--- a/main/package.json
+++ b/main/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "build:preview": "node watch.mjs",
-    "build:start": "vite build && vite preview"
+    "build:start": "vite build -l silent --clearScreen && vite preview --host"
   },
   "dependencies": {
     "react": "^18.3.1",
