--- a/packages/shopflow-product-listing/package.json
+++ b/packages/shopflow-product-listing/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --strictPort",
     "build:preview": "node watch.mjs",
-    "build:start": "vite build && vite preview"
+    "build:start": "vite build -l silent --clearScreen && vite preview --host"
   },
   "dependencies": {
     "axios": "^1.7.7",
